--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uci-cbc-11-notetaker",
+  "name": "notetaker",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
