--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "4": "^0.0.0",
+    "chalk": "^4.1.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
