--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "4": "^0.0.0",
     "chalk": "^4.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^29.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
