--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "notetaker",
+  "name": "note-taker",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest"
+    "start": "node src/server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Chandler Chilvers",
+  "license": "MIT",
   "dependencies": {
-    "4": "^0.0.0",
     "chalk": "^4.1.0",
-    "express": "^4.18.2",
-    "jest": "^29.5.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "express": "^4.18.2"
   }
 }
